Core: Change the signature of entry point
According to PSA FF, the signature of entry point should be
"void entry_point(void)"

Change-Id: Id5b5be8012da3ce9753db2e48818fd79467bb425
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/spm/tfm_spm_db.inc.template
+++ b/secure_fw/spm/tfm_spm_db.inc.template
@@ -33,14 +33,14 @@
 /** Declarations of partition init functions */
 /**************************************************************************/
 #ifdef TFM_PSA_API
-extern psa_status_t tfm_nspm_thread_entry(void);
+extern void tfm_nspm_thread_entry(void);
 #endif
 
 {% for manifest in manifests %}
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-extern int32_t {{manifest.manifest.entry_point}}(void);
+extern void {{manifest.manifest.entry_point}}(void);
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
