Build: Put libtfmsprt.a library into UNPRIV_CODE
Put tfm secure partition library code and rodata into the
TFM_UNPRIV_CODE section to be shared and accessed by secure partitions.

Change-Id: I74a0ca7fe00a690558cf4e8f81a3d814bf9ab207
Signed-off-by: mingyang sun <mingyang.sun@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -39,6 +39,7 @@ LR_CODE S_CODE_START {
         device_definition.o (+RO)
         *(SFN)
         *armlib*
+        *libtfmsprt.a (+RO)
     }
 
     /**** PSA RoT RO part (CODE + RODATA) start here */
