Crypto: Align to Mbed Crypto 3.0.1
This patch upgrades the Crypto service to be able
to use Mbed Crypto 3.0.1:

- Updates the PSA crypto headers to latest available in mbed-crypto
- Updates the service implementation
- Updates the test suites where needed
- Updates the SST and Attestation interfaces
  towards cryptographic functionalities
- Updates documentation to reflect updated
  requirements, and changes in the integration guide

This patch migrates the use of psa_asymmetric_sign() and
psa_asymmetric_verify() to the non-deprecated versions of
the API psa_sign_hash() and psa_verify_hash().

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I7d8275def2336c1b5cfb8847b2842c305cfab116

--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -69,6 +69,7 @@ list(APPEND T_COSE_COMPILE_TIME_CONFIG
 	"T_COSE_DISABLE_ES512"
 	"T_COSE_DISABLE_CONTENT_TYPE"
 	"T_COSE_DISABLE_SIGN_VERIFY_TESTS"
+	"T_COSE_USE_PSA_CRYPTO_FROM_TFM"
 	)
 
 if (NOT ATTEST_INCLUDE_TEST_CODE)
