--- a/secure_fw/services/crypto/tfm_crypto.yaml
+++ b/secure_fw/services/crypto/tfm_crypto.yaml
@@ -14,8 +14,8 @@
   "stack_size": "0x2000",
   "secure_functions": [
     {
-      "name": "TFM_CRYPTO_ALLOCATE_KEY",
-      "signal": "TFM_CRYPTO_ALLOCATE_KEY",
+      "name": "TFM_CRYPTO_GET_KEY_ATTRIBUTES",
+      "signal": "TFM_CRYPTO_GET_KEY_ATTRIBUTES",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
@@ -35,22 +35,22 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_IMPORT_KEY",
-      "signal": "TFM_CRYPTO_IMPORT_KEY",
+      "name": "TFM_CRYPTO_RESET_KEY_ATTRIBUTES",
+      "signal": "TFM_CRYPTO_RESET_KEY_ATTRIBUTES",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_IMPORT_KEY",
+      "signal": "TFM_CRYPTO_IMPORT_KEY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
     },
     {
       "name": "TFM_CRYPTO_DESTROY_KEY",
       "signal": "TFM_CRYPTO_DESTROY_KEY",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_GET_KEY_INFORMATION",
-      "signal": "TFM_CRYPTO_GET_KEY_INFORMATION",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
@@ -77,71 +77,15 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_SET_KEY_POLICY",
-      "signal": "TFM_CRYPTO_SET_KEY_POLICY",
+      "name": "TFM_CRYPTO_HASH_COMPUTE",
+      "signal": "TFM_CRYPTO_HASH_COMPUTE",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_GET_KEY_POLICY",
-      "signal": "TFM_CRYPTO_GET_KEY_POLICY",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_GET_KEY_LIFETIME",
-      "signal": "TFM_CRYPTO_GET_KEY_LIFETIME",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_GENERATE_IV",
-      "signal": "TFM_CRYPTO_CIPHER_GENERATE_IV",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_SET_IV",
-      "signal": "TFM_CRYPTO_CIPHER_SET_IV",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_ENCRYPT_SETUP",
-      "signal": "TFM_CRYPTO_CIPHER_ENCRYPT_SETUP",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_DECRYPT_SETUP",
-      "signal": "TFM_CRYPTO_CIPHER_DECRYPT_SETUP",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_UPDATE",
-      "signal": "TFM_CRYPTO_CIPHER_UPDATE",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_ABORT",
-      "signal": "TFM_CRYPTO_CIPHER_ABORT",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_CRYPTO_CIPHER_FINISH",
-      "signal": "TFM_CRYPTO_CIPHER_FINISH",
+      "name": "TFM_CRYPTO_HASH_COMPARE",
+      "signal": "TFM_CRYPTO_HASH_COMPARE",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
@@ -189,6 +133,20 @@
       "version_policy": "STRICT"
     },
     {
+      "name": "TFM_CRYPTO_MAC_COMPUTE",
+      "signal": "TFM_CRYPTO_MAC_COMPUTE",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_MAC_VERIFY",
+      "signal": "TFM_CRYPTO_MAC_VERIFY",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
       "name": "TFM_CRYPTO_MAC_SIGN_SETUP",
       "signal": "TFM_CRYPTO_MAC_SIGN_SETUP",
       "non_secure_clients": true,
@@ -231,6 +189,69 @@
       "version_policy": "STRICT"
     },
     {
+      "name": "TFM_CRYPTO_CIPHER_ENCRYPT",
+      "signal": "TFM_CRYPTO_CIPHER_ENCRYPT",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_DECRYPT",
+      "signal": "TFM_CRYPTO_CIPHER_DECRYPT",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_ENCRYPT_SETUP",
+      "signal": "TFM_CRYPTO_CIPHER_ENCRYPT_SETUP",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_DECRYPT_SETUP",
+      "signal": "TFM_CRYPTO_CIPHER_DECRYPT_SETUP",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_GENERATE_IV",
+      "signal": "TFM_CRYPTO_CIPHER_GENERATE_IV",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_SET_IV",
+      "signal": "TFM_CRYPTO_CIPHER_SET_IV",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_UPDATE",
+      "signal": "TFM_CRYPTO_CIPHER_UPDATE",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_FINISH",
+      "signal": "TFM_CRYPTO_CIPHER_FINISH",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CIPHER_ABORT",
+      "signal": "TFM_CRYPTO_CIPHER_ABORT",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
       "name": "TFM_CRYPTO_AEAD_ENCRYPT",
       "signal": "TFM_CRYPTO_AEAD_ENCRYPT",
       "non_secure_clients": true,
@@ -245,15 +266,85 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_ASYMMETRIC_SIGN",
-      "signal": "TFM_CRYPTO_ASYMMETRIC_SIGN",
+      "name": "TFM_CRYPTO_AEAD_ENCRYPT_SETUP",
+      "signal": "TFM_CRYPTO_AEAD_ENCRYPT_SETUP",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_DECRYPT_SETUP",
+      "signal": "TFM_CRYPTO_AEAD_DECRYPT_SETUP",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_GENERATE_NONCE",
+      "signal": "TFM_CRYPTO_AEAD_GENERATE_NONCE",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_SET_NONCE",
+      "signal": "TFM_CRYPTO_AEAD_SET_NONCE",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_SET_LENGTHS",
+      "signal": "TFM_CRYPTO_AEAD_SET_LENGTHS",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_UPDATE_AD",
+      "signal": "TFM_CRYPTO_AEAD_UPDATE_AD",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_UPDATE",
+      "signal": "TFM_CRYPTO_AEAD_UPDATE",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_FINISH",
+      "signal": "TFM_CRYPTO_AEAD_FINISH",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_VERIFY",
+      "signal": "TFM_CRYPTO_AEAD_VERIFY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_AEAD_ABORT",
+      "signal": "TFM_CRYPTO_AEAD_ABORT",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_SIGN_HASH",
+      "signal": "TFM_CRYPTO_SIGN_HASH",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_ASYMMETRIC_VERIFY",
-      "signal": "TFM_CRYPTO_ASYMMETRIC_VERIFY",
+      "name": "TFM_CRYPTO_VERIFY_HASH",
+      "signal": "TFM_CRYPTO_VERIFY_HASH",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
@@ -273,43 +364,71 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_GET_GENERATOR_CAPACITY",
-      "signal": "TFM_CRYPTO_GET_GENERATOR_CAPACITY",
+      "name": "TFM_CRYPTO_KEY_DERIVATION_SETUP",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_SETUP",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_KEY_DERIVATION_GET_CAPACITY",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_GET_CAPACITY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_KEY_DERIVATION_SET_CAPACITY",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_SET_CAPACITY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_KEY_DERIVATION_INPUT_BYTES",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_INPUT_BYTES",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_KEY_DERIVATION_INPUT_KEY",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_INPUT_KEY",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_GENERATOR_READ",
-      "signal": "TFM_CRYPTO_GENERATOR_READ",
+      "name": "TFM_CRYPTO_KEY_DERIVATION_KEY_AGREEMENT",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_KEY_AGREEMENT",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_GENERATOR_IMPORT_KEY",
-      "signal": "TFM_CRYPTO_GENERATOR_IMPORT_KEY",
+      "name": "TFM_CRYPTO_KEY_DERIVATION_OUTPUT_BYTES",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_OUTPUT_BYTES",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_GENERATOR_ABORT",
-      "signal": "TFM_CRYPTO_GENERATOR_ABORT",
+      "name": "TFM_CRYPTO_KEY_DERIVATION_OUTPUT_KEY",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_OUTPUT_KEY",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_KEY_DERIVATION",
-      "signal": "TFM_CRYPTO_KEY_DERIVATION",
+      "name": "TFM_CRYPTO_KEY_DERIVATION_ABORT",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION_ABORT",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_CRYPTO_KEY_AGREEMENT",
-      "signal": "TFM_CRYPTO_KEY_AGREEMENT",
+      "name": "TFM_CRYPTO_RAW_KEY_AGREEMENT",
+      "signal": "TFM_CRYPTO_RAW_KEY_AGREEMENT",
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
