Boot: Switch boot to use mbed-crypto
Replace the dependency on mbedtls with the version of mbedtls packaged
with mbed-crypto.

Change-Id: I17a68f904c9cd68085ecb4432a7a10d6b64494a1
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/secure_fw/services/crypto/CMakeLists.txt
+++ b/secure_fw/services/crypto/CMakeLists.txt
@@ -29,10 +29,10 @@ set (CRYPTO_ENGINE_MBEDTLS ON)
 
 if (CRYPTO_ENGINE_MBEDTLS)
   #Define location of Mbed Crypto source, build, and installation directory.
-  get_filename_component(MBEDTLS_SOURCE_DIR "${TFM_ROOT_DIR}/../mbed-crypto" ABSOLUTE)
-  set (MBEDTLS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbedcrypto")
-  set (MBEDTLS_INSTALL_DIR ${MBEDTLS_BINARY_DIR}/mbedcrypto_install)
-  set (MBEDTLS_TARGET_NAME "mbedcrypto_lib")
+  get_filename_component(MBEDCRYPTO_SOURCE_DIR "${TFM_ROOT_DIR}/../mbed-crypto" ABSOLUTE)
+  set (MBEDCRYPTO_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbed-crypto/build")
+  set (MBEDCRYPTO_INSTALL_DIR ${MBEDCRYPTO_BINARY_DIR}/../install)
+  set (MBEDCRYPTO_TARGET_NAME "mbedcrypto_lib")
 endif()
 
 include(CMakeLists.inc)
@@ -64,8 +64,8 @@ endif()
 
 if (CRYPTO_ENGINE_MBEDTLS)
   #Set Mbed Crypto compiler flags
-  set(MBEDTLS_C_FLAGS ${MBEDTLS_C_FLAGS_SERVICES})
-  string(APPEND MBEDTLS_C_FLAGS " -DMBEDTLS_CONFIG_FILE=\\\\\\\"tfm_mbedcrypto_config.h\\\\\\\""
+  set(MBEDCRYPTO_C_FLAGS ${MBEDCRYPTO_C_FLAGS_SERVICES})
+  string(APPEND MBEDCRYPTO_C_FLAGS " -DMBEDTLS_CONFIG_FILE=\\\\\\\"tfm_mbedcrypto_config.h\\\\\\\""
                                 " -I${CMAKE_CURRENT_LIST_DIR}")
 
   #Build Mbed Crypto as external project.
@@ -79,9 +79,9 @@ add_library(tfm_crypto STATIC ${ALL_SRC_ASM} ${ALL_SRC_C})
 embedded_set_target_compile_defines(TARGET tfm_crypto LANGUAGE C DEFINES ${TFM_CRYPTO_C_DEFINES_LIST})
 if (CRYPTO_ENGINE_MBEDTLS)
   #Add a dependency on the Mbed Crypto install target.
-  add_dependencies(tfm_crypto ${MBEDTLS_TARGET_NAME}_install)
+  add_dependencies(tfm_crypto ${MBEDCRYPTO_TARGET_NAME}_install)
   #Ask the compiler to merge the Mbed Crypto and crypto service libraries.
-  compiler_merge_library(DEST tfm_crypto LIBS "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
+  compiler_merge_library(DEST tfm_crypto LIBS "${MBEDCRYPTO_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
 endif()
 
 #Set common compiler and linker flags
