Core: Align the parameter package for psa_call
Align the parameter package for psa_call in non-secure and secure,
so that don't need to judge the ns_caller to extract the parameters.
Increase stack size since ctrl_param will be pushed into stack.

Change-Id: If1cb7d4f36619fbb5bc7c52e891c0ab2d764131b
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/test/test_services/tfm_sst_test_service/tfm_sst_test_service.yaml
+++ b/test/test_services/tfm_sst_test_service/tfm_sst_test_service.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2019, Arm Limited. All rights reserved.
+# Copyright (c) 2019-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -11,7 +11,7 @@
   "type": "PSA-ROT",
   "priority": "NORMAL",
   "entry_point": "tfm_sst_test_init",
-  "stack_size": "0x400",
+  "stack_size": "0x440",
   "secure_functions": [
     {
       "name": "TFM_SST_TEST_PREPARE",
