Test: Light test for multi-core multiple outstanding NS PSA Client calls
Create multiple threads in NS test to send PSA client call to
lightweight SPE secure services simultaneously.
Each child thread in NS test loops several rounds of psa_connect(),
psa_call() and psa_close(), which are sent to multi-core test
specific secure services.
Add two multi-core topology specific lightweight test secure
services to handle the PSA client calls from NS child threads. Each
just returns the number of PSA client calls.

Change-Id: Id235a3a32ef126d35903fb7ec1ee70120bfbb040
Signed-off-by: David Hu <david.hu@arm.com>

--- a/test/test_services/tfm_multi_core_test/tfm_multi_core_test.yaml
+++ b/test/test_services/tfm_multi_core_test/tfm_multi_core_test.yaml
@@ -17,9 +17,17 @@
   ],
   "services" : [
     {
-      "name": "MULTI_CORE_TEST_DUMMY",
+      "name": "MULTI_CORE_MULTI_CLIENT_CALL_TEST_0",
       "sid": "0x0000F100",
-      "signal": "MULTI_CORE_TEST_DUMMY_SIGNAL",
+      "signal": "MULTI_CORE_MULTI_CLIENT_CALL_TEST_0_SIGNAL",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "MULTI_CORE_MULTI_CLIENT_CALL_TEST_1",
+      "sid": "0x0000F101",
+      "signal": "MULTI_CORE_MULTI_CLIENT_CALL_TEST_1_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
