--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -17,6 +17,7 @@
       "manifest": "secure_fw/services/secure_storage/tfm_secure_storage.yaml",
       "tfm_extensions": true,
       "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_SECURE_STORAGE",
       "version_major": 0,
       "version_minor": 1,
       "pid": 256
@@ -27,6 +28,7 @@
       "manifest": "secure_fw/services/internal_trusted_storage/tfm_internal_trusted_storage.yaml",
       "tfm_extensions": true,
       "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_INTERNAL_TRUSTED_STORAGE",
       "version_major": 0,
       "version_minor": 1,
       "pid": 257
@@ -35,9 +37,9 @@
       "name": "TFM Audit Log Service",
       "short_name": "TFM_SP_AUDIT_LOG",
       "manifest": "secure_fw/services/audit_logging/tfm_audit_logging.yaml",
-      "conditional": "TFM_PARTITION_AUDIT_LOG",
       "tfm_extensions": true,
       "tfm_partition_ipc": false,
+      "conditional": "TFM_PARTITION_AUDIT_LOG",
       "version_major": 0,
       "version_minor": 1,
       "pid": 258
@@ -48,6 +50,7 @@
       "manifest": "secure_fw/services/crypto/tfm_crypto.yaml",
       "tfm_extensions": true,
       "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_CRYPTO",
       "version_major": 0,
       "version_minor": 1,
       "pid": 259
@@ -69,6 +72,7 @@
       "manifest": "secure_fw/services/initial_attestation/tfm_initial_attestation.yaml",
       "tfm_extensions": true,
       "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_INITIAL_ATTESTATION",
       "version_major": 0,
       "version_minor": 1,
       "pid": 261
