Test: Add optional include of test suites
This patch adds optional include of test suites in both secure
and non-secure test suites lists.
Note that audit log and platform service test suites have already
supported optional include and optional building for test suites
have been supported as well.

Change-Id: Icc83ee99d488a03c97d840f360d42749e41f5420
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/lib/t_cose/CMakeLists.txt
+++ b/lib/t_cose/CMakeLists.txt
@@ -43,6 +43,7 @@ list(APPEND ALL_SRC_C_VERIFY
 
 #Setting include directories
 embedded_include_directories(PATH ${T_COSE_DIR}/inc ABSOLUTE)
+embedded_include_directories(PATH ${TFM_ROOT_DIR}/secure_fw/services/initial_attestation ABSOLUTE)
 embedded_target_include_directories(TARGET tfm_t_cose_verify PATH ${TFM_ROOT_DIR}/lib/ext/qcbor/util ABSOLUTE APPEND)
 embedded_target_include_directories(TARGET tfm_t_cose_verify PATH ${TFM_ROOT_DIR}/test/suites/attestation ABSOLUTE APPEND)
 embedded_target_include_directories(TARGET tfm_t_cose_sign   PATH ${TFM_ROOT_DIR}/platform/include ABSOLUTE APPEND)
