Build: set SST_TEST_NV_COUNTERS for SST regression
The SST_TEST_NV_COUNTERS should be set to ON only when SST regression
is ON for all level of isolation.
This patch first moves out the test configurations out of
test/CMakeLists.txt to a seperate file for CommonConfig.cmake to
include and then set SST_TEST_NV_COUNTERS to on when SST regression
is on.

Change-Id: Icc7c7086023d73f2570ef27233abc2cdc0c480e0
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,13 +75,8 @@ else()
 	set(TFM_ENABLE_PERIPH_ACCESS_TEST FALSE)
 endif()
 
-option(ENABLE_SECURE_STORAGE_SERVICE_TESTS "Option for secure storage service tests" TRUE)
-option(ENABLE_INTERNAL_TRUSTED_STORAGE_SERVICE_TESTS "Option for internal trusted storage services tests" TRUE)
-option(ENABLE_AUDIT_LOGGING_SERVICE_TESTS "Option for audit logging service tests" TRUE)
-option(ENABLE_CRYPTO_SERVICE_TESTS "Option for crypto service tests" TRUE)
-option(ENABLE_ATTESTATION_SERVICE_TESTS "Option for attestation service tests" TRUE)
-option(ENABLE_PLATFORM_SERVICE_TESTS "Option for platform service tests" TRUE)
-option(ENABLE_QCBOR_TESTS "Option for qcbor tests" TRUE)
+include(${CMAKE_CURRENT_LIST_DIR}/TestConfig.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists.inc)
 
 if (ENABLE_SECURE_STORAGE_SERVICE_TESTS)
 	embedded_set_target_compile_defines(TARGET tfm_secure_tests LANGUAGE C DEFINES ENABLE_SECURE_STORAGE_SERVICE_TESTS APPEND)
@@ -121,8 +116,6 @@ if (ENABLE_AUDIT_LOGGING_SERVICE_TESTS)
 	embedded_set_target_compile_defines(TARGET tfm_secure_tests LANGUAGE C DEFINES ENABLE_AUDIT_LOGGING_SERVICE_TESTS APPEND)
 	embedded_set_target_compile_defines(TARGET tfm_non_secure_tests LANGUAGE C DEFINES ENABLE_AUDIT_LOGGING_SERVICE_TESTS APPEND)
 endif()
-
-include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists.inc)
 
 if (NOT DEFINED TFM_BUILD_IN_SPE)
 	message(FATAL_ERROR "TFM_BUILD_IN_SPE is not set. Cannot specify current building status")
