Test: Add SST test partition
Adds an SST test partition, which can be used to call the
sst_system_prepare() function from the SST test partition's
context.

Change-Id: Ib07a88e5f05fc181da2b9276279e57618fb059e4
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -222,6 +222,12 @@ function(set_up_secure_fw_build)
 		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_PARTITION_TEST_SECURE_SERVICES")
 	endif()
 
+	if (NOT DEFINED TFM_PARTITION_TEST_SST)
+		message(FATAL_ERROR "Incomplete build configuration: TFM_PARTITION_TEST_SST is undefined.")
+	elseif (TFM_PARTITION_TEST_SST)
+		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_PARTITION_TEST_SST")
+	endif()
+
 	if (NOT DEFINED TEST_FRAMEWORK_S)
 		message(FATAL_ERROR "Incomplete build configuration: TEST_FRAMEWORK_S is undefined.")
 	elseif (TEST_FRAMEWORK_S)
