--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -138,6 +138,17 @@
       "version_major": 0,
       "version_minor": 1,
       "pid": 267
+    },
+    {
+      "name": "TF-M SST Test Service",
+      "short_name": "TFM_SP_SST_TEST",
+      "manifest": "test/test_services/tfm_sst_test_service/tfm_sst_test_service.yaml",
+      "tfm_extensions": true,
+      "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_TEST_SST",
+      "version_major": 0,
+      "version_minor": 1,
+      "pid": 268
     }
   ]
 }
