Doc: Restructured readme.rst
This patch converts the readme.rst, placed outside
of the documentation directory to a quick reference
page, using direct linking for hyperlinks. Doing so
would allow cgit to render it properly

Contents of the file have been moved to the index.rst.in

Change-Id: I6769465561ccaf98957af325103bef8b89b71026
Signed-off-by: Galanakis, Minos <minos.galanakis@arm.com>

--- a/docs/index.rst.in
+++ b/docs/index.rst.in
@@ -16,6 +16,7 @@ Trusted Firmware-M Documentation
     :maxdepth: 2
     :hidden:
 
+    Home<docs/readme>
     docs/lic
     docs/dco
     docs/maintainers
@@ -101,7 +102,7 @@ Trusted Firmware-M Documentation
 
     tools/iat-verifier/*
 
-.. include:: readme.rst
+.. include:: docs/readme.rst
 
 -----------
 
